--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -4,9 +4,9 @@
 </head>
 <body>
     <%- include('../layout/header')-%>
-    <div class="container d-flex mb-4" style="justify-content: space-between; align-items: center;">
+    <div class="container d-flex mb-4 mt-2" style="justify-content: space-between; align-items: center;">
         <h2 class="text" style="margin-top: 20px;  font-family: 'Michroma', sans-serif;"><u>Cart!</u></h2>
-        <a href="/user/wishlist/" class="btn btn-dark rounded"><h4 style="margin-top: 5px;  font-family: 'Michroma', sans-serif;">Wishlist</h4></a>
+        <a href="/user/wishlist/" class="btn btn-dark rounded"><h4 style="margin-top: 5px;  font-family: 'Michroma', sans-serif;">Go To Wishlist</h4></a>
     </div>
     <div class="container productCont" style="margin-top: 10px; border: none; background-color: #ffffff; ">
         <% if (locals?.products) { %>
