--- a/views/user/changePassword.ejs
+++ b/views/user/changePassword.ejs
@@ -9,7 +9,7 @@
     <div class="container mt-5 mb-5" style="display: flex; justify-content: center;">
         <div class="mainCont" style="max-width: 700px; border: 1px solid black; border-radius: 20px; padding: 20px;">
             <form class="row g-3 needs-validation" action="/user/redirect/" method="get" novalidate enctype="application/form-data">
-                <h3 class="mb-4 text-center mb-3" style="font-family: 'Michroma', sans-serif;">Edit Password!</h3>
+                <h3 class="mb-4 text-center mb-3" style="font-family: 'Michroma', sans-serif;">Change Password!</h3>
                 <div class="col-md-12">
                   <label for="validationPassword" class="form-label">Current Password</label>
                   <div class="input-group has-validation">
@@ -18,7 +18,7 @@
                     <span class="btn rounded-pill" onclick="togglePassword1()" id="passKey1" style="font-size: 20px;"><i class="bi bi-eye-slash-fill"></i></span>
                     <span class="error-span">&nbsp;</span>
                     <div class="invalid-feedback">
-                      Enter A Valid Password !
+                      Enter A Your Password !
                     </div>
                   </div>
                 </div>
@@ -109,30 +109,36 @@
             
                         if (/^\s*$/.test(currentPasswordValue)) {
                             showAlert('Password cannot be just spaces.');
+                            form.classList.add('was-validated');
                             return;
                         }
             
                         if (currentPasswordValue.length < 8) {
                             showAlert('Password number must be at least 10 digits.');
+                            form.classList.add('was-validated');
                             return;
                         }
             
                         if (/^\s*$/.test(confirmPasswordValue)) {
                             showAlert('Password cannot be just spaces.');
+                            form.classList.add('was-validated');
                             return;
                         }
             
                         if (confirmPasswordValue.length < 8) {
                             showAlert('Password must be at least 8 characters.');
+                            form.classList.add('was-validated');
                             return;
                         }
                         if (/^\s*$/.test(currentPasswordValue)) {
                             showAlert('Password cannot be just spaces.');
+                            form.classList.add('was-validated');
                             return;
                         }
             
                         if (currentPasswordValue.length < 8) {
                             showAlert('Password must be at least 8 characters.');
+                            form.classList.add('was-validated');
                             return;
                         }
             
@@ -159,7 +165,6 @@
                         }
                     });
             
-                    form.classList.add('was-validated');
                 }, false);
             })();
             
