--- a/views/admin/orderDetailed.ejs
+++ b/views/admin/orderDetailed.ejs
@@ -168,7 +168,7 @@
                     <%}%>
               <%var offer=parseInt(order.offer)%>
               <%if(offer){%>
-                <%var discount=(order.payment.amount*offer/100)%>
+                <%var discount=(order.products.totalPrice*offer/100)%>
                 <tr>
                   <th scope="row"><h6  style="font-family: 'Michroma', sans-serif;">Total:</h5></th>
                     <td class="text-danger">&#x20B9  <%= (order.payment.amount+discount).toFixed(2) %></td>
@@ -328,7 +328,7 @@
           else if (data.cancelled===true){
             cancelButton.textContent="Order Cancelled"
             showSuccess("Order Cancelled")
-            location.reload()
+            window.location.href="/admin/allOrders"
           }else{
             showAlert("Not Cancelled Error Ocurred")
           }
