--- a/views/layout/adminHeader.ejs
+++ b/views/layout/adminHeader.ejs
@@ -42,6 +42,9 @@
                   <div>
                     <a type="button" href="/admin/bannerManagement" class="btn btn-dark d-flex justify-content-center" style=" text-decoration: none;">BANNER MANAGEMENT</a>
                   </div>
+                  <div>
+                    <a type="button" href="/admin/couponManagement" class="btn btn-dark d-flex justify-content-center" style=" text-decoration: none;">COUPON MANAGEMENT</a>
+                  </div>
                     <div class="btn-group dropdown">
                 <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     BRANDS
