--- a/views/user/allProducts.ejs
+++ b/views/user/allProducts.ejs
@@ -6,7 +6,54 @@
     <%- include('../layout/header') %>
 
 <div class="container productCont productContAll">
-    <h2 class="text-center mt-4 mb-3" style="font-family: 'Michroma', sans-serif;"><%= locals.brand ? brand : 'All Products' %></h2>
+
+    <div class="btn-group dropdown" style="font-family: 'Michroma', sans-serif; font-size: large; ">
+        <button type="button " style="font-size: larger;" class="btn btn-dark rounded-pill dropdown-toggle px-3 py-2" data-bs-toggle="dropdown" aria-expanded="false">
+            Filter
+        </button>
+        <ul class="dropdown-menu bg-dark text-center p-4" style="box-shadow: 4px 4px 8px rgba(255, 255, 255, 0.913);">
+            <li class="dropdown pb-4 ps-3 pe-3">
+                <div class="btn-group dropend">
+                    <button class="btn btn-dark dropdown-toggle px-3 py-2" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        CATEGORIES
+                    </button>
+                    <ul class="dropdown-menu bg-dark text-center p-4" style="box-shadow: 4px 4px 8px rgba(255, 255, 255, 0.913);">
+                        <% if (locals?.categories) { %>
+                            <% categories.forEach(category => { %>
+                                <li class="pb-4 ps-3 pe-3"><a style="text-decoration: none;" href="/user/allCategories?id=<%= category._id %>"><%= category.name.toUpperCase() %></a></li>
+                            <% }) %>
+                        <% } else { %>
+                            <li class="pb-4 ps-3 pe-3">NO CATEGORIES!</li>
+                        <% } %>
+                    </ul>
+                </div>
+                <div class="btn-group dropend">
+                    <button class="btn btn-dark dropdown-toggle px-3 py-2" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        BRANDS
+                    </button>
+                    <ul class="dropdown-menu bg-dark text-center p-4 " style="box-shadow: 4px 4px 8px rgba(255, 255, 255, 0.913);">
+                        <li class="text-center hover   pb-4 ps-3 pe-3"><a class="" style="text-decoration: none;" href="/user/brandBased/">All Brands</a></li>
+                        <li class="text-center hover  pb-4 ps-3 pe-3"><a style="text-decoration: none;" class=" " href="/user/brand?brand=adidas">ADIDAS</a></li>
+                        <li class="text-center hover  pb-4 ps-3 pe-3"><a style="text-decoration: none;" class=" " href="/user/brand?brand=reebok">REEBOK</a></li>
+                        <li class="text-center hover  pb-4 ps-3 pe-3"><a style="text-decoration: none;" class=" " href="/user/brand?brand=jordan">JORDAN</a></li>
+                        <li class="text-center hover  pb-4 ps-3 pe-3"><a style="text-decoration: none;" class=" " href="/user/brand?brand=asics">ASICS</a></li>
+                        <li class="text-center hover  pb-4 ps-3 pe-3"><a style="text-decoration: none;" class=" " href="/user/brand?brand=crocs">CROCS</a></li>
+                        <li class="text-center hover  ps-3 pe-3"><a style="text-decoration: none;" class=" " href="/user/brand?brand=converse">CONVERSE</a></li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+        <script>
+            $('.dropdown-menu').on('click', function(e) {
+            if ($(this).hasClass('dropdown-menu')) {
+                e.stopPropagation();
+            }
+            });
+        </script>
+    </div>
+    
+
+    <h2 class="text-center mt-2 mb-3" style="font-family: 'Michroma', sans-serif;"><%= locals.brand ? brand : 'All Products' %></h2>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 d-flex mb-5" style="justify-content: center;">
         <% if (products && products.length > 0) { %>
             <% products.forEach(product => { %>
